<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.win.jobready365.Main2Activity"
    tools:showIn="@layout/activity_main2"
    android:background="@mipmap/landscape">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        app:srcCompat="@mipmap/image"
        android:id="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/autoCompleteTextView_category"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/job_category"
        android:background="@android:color/background_light" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteTextView_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/autoCompleteTextView_location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/location"
        android:background="@android:color/background_light" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteTextView_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:id="@+id/autoCompleteTextView_type"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/job_type"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/search_jobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_search_jobs"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/autoCompleteTextView_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

</RelativeLayout>
