<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.win.jobready365.MainActivity5"
    tools:showIn="@layout/activity_main"
    android:background="@mipmap/landscape">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        style="@style/MyTextViewStyle.BoldRed"
        android:layout_above="@+id/passwordInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:id="@+id/usernameInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/name"
        android:textAppearance="@style/MyTextViewStyle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        style="@style/MyTextViewStyle.BoldRed"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/image"
        android:layout_below="@+id/btn_mm"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="28dp"
        android:id="@+id/imageView3" />

    <TextView
        android:text="JobReady365"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="19dp"
        android:id="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        tools:text="admin@JOBREADY365"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/eng_string"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:id="@+id/btn_eng"

        android:background="?attr/colorControlHighlight"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/mm_string"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:id="@+id/btn_mm"


        android:background="?attr/colorControlHighlight"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_eng"
        android:layout_toStartOf="@+id/btn_eng" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButtonPost"
        android:layout_marginBottom="42dp"
        android:elevation="3dp"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_button"
        style="@style/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
